fixed overview page wrapping

--- a/tools/static/tools/css/category.css
+++ b/tools/static/tools/css/category.css
@@ -45,7 +45,7 @@
 }
 
 .category-content{
-  min-height: 10rem;
+  min-height: 11rem;
   overflow: hidden;
   line-height: 1.5rem;
 }
